tests/baselines/reference/jsxImportForSideEffectsNonExtantNoError.errors.txt
jsxImportForSideEffectsNonExtantNoError.tsx(4,8): error TS2307: Cannot find module './App.css' or its corresponding type declarations.


==== jsxImportForSideEffectsNonExtantNoError.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import * as React from "react";
    
    import "./App.css"; // doesn't actually exist
           ~~~~~~~~~~~
!!! error TS2307: Cannot find module './App.css' or its corresponding type declarations.
    
    const tag = <div></div>;
    